<resources>
    <string name="app_name">E-Surat Permintaan</string>

    <string name="profile_get_error_message">Terjadi kesalahan saat mengambil data profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="clear_sorting">Clear</string>
    <string name="row_show">Show 5. Row</string>
    <string name="row_hide">Hide 5. Row</string>
    <string name="msg_token_fmt">User TokenID %1$s</string>
    <string name="firebase_onmessagereceived_intentfilter">com.e-suratpermintaan.fcm</string>
    <string name="IdSpKeyExtraforDetailSPActivity">id_sp</string>
    <string name="main_header_list_count_msg">Menampilkan %1$s entri</string>
    <string name="toolbar_detail">Detail</string>
    <string name="toolbar_edit">Edit Detail</string>
    <string name="toolbar_history">Riwayat</string>
    <string name="toolbar_detail_history">Detail Riwayat</string>
    <string name="toolbar_profile">Profile</string>
    <string name="toolbar_notifikasi">Notifikasi</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="filter_sp_dialog_title">Filter Surat Permintaan</string>
    <string name="ajukan_sp_dialog_title">Ajukan Surat Permintaan</string>
    <string name="confirmation_dialog_title">Konfirmasi</string>
    <string name="pengajuan_confirmation_dialog_message">Apakah Anda yakin ingin menambah pengajuan?</string>
    <string name="yes_btn_text">Ya</string>
    <string name="must_choose_toast_msg">\"Silakan pilih \"</string>
    <string name="nothing_data">Tidak ada data</string>
    <string name="label_detail_surat_permintaan">Detail Surat Permintaan</string>
    <string name="delete_btn_text">Hapus</string>
    <string name="label_proyek">Proyek</string>
    <string name="label_location">Lokasi</string>
    <string name="label_code">Kode</string>
    <string name="label_date">Tanggal</string>
    <string name="label_time">Pukul</string>
    <string name="label_status_permintaan">Status Permintaan</string>
    <string name="label_jenis">Jenis</string>
    <string name="label_item_surat_permintaan">Item Surat Permintaan</string>
    <string name="label_file_lampiran">File Lampiran</string>
    <string name="history_btn_text">Riwayat</string>
    <string name="cancel_btn_text">Batalkan</string>
    <string name="decline_btn_text">Tolak</string>
    <string name="edit_btn_text">Edit</string>
    <string name="ajukan_btn_text">Ajukan</string>
    <string name="accept_btn_text">Terima</string>
    <string name="surat_permintaan">Surat Permintaan</string>
    <string name="filter_data">Filter data</string>
    <string name="label_name">Nama</string>
    <string name="label_email">Email</string>
    <string name="label_username">Username</string>
    <string name="label_role">Role</string>
    <string name="label_jenis_permintaan">Jenis Permintaan</string>
    <string name="label_description">Deskripsi</string>
    <string name="label_old_pass">Password Lama</string>
    <string name="hint_old_pass">Isi password lama</string>
    <string name="label_new_pass">Password Baru</string>
    <string name="hint_new_pass">Isi password baru</string>
    <string name="label_confirm_pass">Konfirmasi Password Baru</string>
    <string name="hint_confirm_pass">Ketik ulang password baru</string>
    <string name="label_signature">Tanda Tangan</string>
    <string name="upload_ttd_btn_text">Upload TTD</string>
    <string name="save_btn_text">Simpan</string>
    <string name="label_kode_pekerjaan">Kode Pekerjaan</string>
    <string name="label_vol">Vol</string>
    <string name="label_satuan">Satuan</string>
    <string name="label_capacity">Kapasitas</string>
    <string name="label_merk">Merk</string>
    <string name="label_time_use">Waktu\nPemakaian</string>
    <string name="label_keterangan">Keterangan/ \nTujuannya</string>
    <string name="label_ditugaskan_kepada">Ditugaskan\nKepada</string>
    <string name="label_status_penugasan">Status\nPenugasan</string>
    <string name="label_process_by_penugasan">Process by</string>
    <string name="penugasan_btn_text">Penugasan</string>
    <string name="process_btn_text">Process</string>
    <string name="un_process_btn_text">Un-Process</string>
    <string name="label_function">Fungsi</string>
    <string name="label_target_tanggal_datang">Target Tanggal\nDatang</string>
    <string name="label_waktu_pelaksanaan">Waktu\nPelaksanaan</string>
    <string name="label_persyaratan">Persyaratan</string>
    <string name="label_item">Item</string>
    <string name="tambah_item_text">Tambah Item</string>
    <string name="tambah_lampiran_text">Tambah Lampiran</string>
    <string name="label_lampiran">Lampiran</string>
    <string name="below_app_name_text">Masuk untuk melanjutkan</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="login_btn_text">Masuk</string>
    <string name="welcome_text">Selamat Datang</string>
    <string name="welcome_app_name_text">di E-Surat Permintaan\nPT Jagat Konstruksi</string>
    <string name="next_btn_text">Lanjutkan</string>
    <string name="toolbar_master_data">Master Data</string>
    <string name="konfirmasi_simpan_text_message">Apakah file lampiran spesifikasi sudah diupload?</string>
    <string name="dialog_btn_simpan_data">Simpan Data</string>
    <string name="dialog_btn_tutup">Tutup</string>
    <string name="btn_edit_file">Edit file</string>
    <string name="label_kategori">Kategori</string>
    <string name="label_jenis_barang">Jenis Barang</string>
    <string name="print_surat_permintaan">Cetak Surat Permintaan</string>
    <string name="print_by_process">Print By Process</string>
    <string name="text_ttd">Tanda Tangan</string>
    <string name="remove_ttd_button_text">Bersihkan papan tanda tangan</string>
    <string name="submit_ttd_question">Apakah anda ingin mengajukan surat permintaan ini?</string>
    <string name="batal_text">Batal</string>
    <string name="create_ttd_text">Buat tanda tangan</string>
    <string name="select_from_storage_text">Ambil dari penyimpanan</string>
    <string name="keterangan_text">Keterangan</string>
    <string name="clear_text">Bersihkan</string>
    <string name="verif_ttd_text_question">Apakah anda ingin memverifikasi surat permintaan ini?</string>
    <string name="download_text">Download</string>
    <string name="add_item_text">Tambah Item</string>
    <string name="rollback_btn_text">Rollback</string>
    <string name="note_title">Berikan Catatan</string>
    <string name="note_empty_message">Tuliskan catatan terlebih dahulu</string>
    <string name="reset_text">Reset</string>
    <string name="filter_text">Filter</string>
    <string name="downloading_text">Mendownload</string>
    <string name="percentage_download">%d%%</string>
    <string name="cancel_text">Batal</string>
    <string name="add_text">Tambah</string>
    <string name="description_file_text">Keterangan file</string>
    <string name="filename_text">Nama File</string>
    <string name="select_file_text">Pilih file</string>
    <string name="camera_text">Kamera</string>
    <string name="gallery_text">Galeri</string>
    <string name="please_wait_test">Tunggu sebentar</string>
    <string name="upload_signature">Unggah tanda tangan</string>
    <string name="success_make_signature">Tanda tangan telah dibuat\nSilahkan menyimpan perubahan</string>
    <string name="success_select_photo_profile">Foto berhasil dipilih\nSilahkan menyimpan perubahan</string>
    <string name="file_not_found">File Tdak ditemukan</string>
    <string name="new_password_not_same">Password baru tidak sama</string>
</resources>
