<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labelTtd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ttd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.gcacace.signaturepad.views.SignaturePad
            android:id="@+id/signaturePadAjukan"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_radius_stroke_grey"
            app:layout_constraintTop_toBottomOf="@id/labelTtd"
            app:penColor="@android:color/black" />

        <Button
            android:id="@+id/btnClearTtdAjukan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/remove_ttd_button_text"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signaturePadAjukan" />

        <View
            android:id="@+id/lineSeparatorAjukan"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/separator_color"
            app:layout_constraintTop_toBottomOf="@+id/btnClearTtdAjukan"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/questionAjukan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/submit_ttd_question"
            app:layout_constraintTop_toBottomOf="@id/lineSeparatorAjukan"
            tools:layout_editor_absoluteX="16dp" />


        <Button
            android:id="@+id/btnFixAjukan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/yes_btn_text"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionAjukan" />

        <Button
            android:id="@+id/btnCancelAjukan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/batal_text"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionAjukan" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>