<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/etKeteranganFile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_radius_stroke_grey"
        android:padding="15dp"
        android:text="@string/konfirmasi_simpan_text_message"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorBlue"
        android:text="@string/dialog_btn_simpan_data"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTutup"
        app:layout_constraintTop_toBottomOf="@+id/etKeteranganFile"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btnTutup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dialog_btn_tutup"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btnSimpan"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etKeteranganFile" />

</androidx.constraintlayout.widget.ConstraintLayout>