<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="24dp">
    <!--
    Clearly not a Spinner at all. Google has decided there should no
    longer be any such thing. If we want a Spinner, we need to hack one
    together by defining a TextInputLayout that wraps an AutoCompleteTextView.
    Of course, TextInputLayout looks and behaves NOTHING like a Spinner, so
    we're now forced to implement a complex style to force our TextInputLayout
    to look and behave like the Spinner we wanted in the first place...
    Let see this :
    https://medium.com/@rmirabelle/there-is-no-material-design-spinner-for-android-3261b7c77da8
    https://github.com/material-components/material-components-android/issues/1001
     -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilStatus"
        style="@style/AppTheme.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <AutoCompleteTextView
            android:id="@+id/spinnerStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_status_permintaan"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilProyek"
        style="@style/AppTheme.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilStatus">
        <!-- Google themselves instruct us to use the deprecated editable attribute -->
        <AutoCompleteTextView
            android:id="@+id/spinnerProyek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_proyek"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilJenis"
        style="@style/AppTheme.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilProyek">
        <!-- Google themselves instruct us to use the deprecated editable attribute -->
        <AutoCompleteTextView
            android:id="@+id/spinnerJenis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_jenis_permintaan"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/tilJenisData"-->
<!--        style="@style/AppTheme.ExposedDropdownMenu"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tilJenis">-->
<!--        &lt;!&ndash; Google themselves instruct us to use the deprecated editable attribute &ndash;&gt;-->
<!--        <AutoCompleteTextView-->
<!--            android:id="@+id/spinnerJenisData"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Jenis Data"-->
<!--            android:inputType="none" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/btnFilterReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#A5A5A5"
        android:paddingVertical="12dp"
        android:text="@string/reset_text"
        app:layout_constraintEnd_toEndOf="@+id/tilJenis"
        app:layout_constraintStart_toStartOf="@+id/tilJenis"
        app:layout_constraintTop_toBottomOf="@+id/tilJenis" />

    <Button
        android:id="@+id/btnFilterSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingVertical="12dp"
        android:text="@string/filter_text"
        android:backgroundTint="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="@+id/btnFilterReset"
        app:layout_constraintStart_toStartOf="@+id/btnFilterReset"
        app:layout_constraintTop_toBottomOf="@+id/btnFilterReset" />


</androidx.constraintlayout.widget.ConstraintLayout>