<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.navigation.WelcomeFragment">

    <ImageView
        android:id="@+id/imge_ripple_welcome"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/ic_ripple_bg"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:src="@drawable/logo_white_2"
        app:layout_constraintBottom_toBottomOf="@+id/imge_ripple_welcome"
        app:layout_constraintEnd_toEndOf="@+id/imge_ripple_welcome"
        app:layout_constraintStart_toStartOf="@+id/imge_ripple_welcome"
        app:layout_constraintTop_toTopOf="@+id/imge_ripple_welcome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/imge_ripple_welcome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imge_ripple_welcome"
        app:layout_constraintTop_toBottomOf="@+id/imge_ripple_welcome"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_app_name_text"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnNext"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        android:padding="12dp"
        android:text="@string/next_btn_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>